// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRadio Input test match last snapshot of <FormRadio /> 1`] = `
.c2 {
  display: block;
  color: #272727;
  font-size: 1rem;
  font-family: "Gentona","Montserrat";
}

.c2:hover {
  cursor: pointer;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  border: 2px solid #76B6C4;
  outline: none;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
}

.c1:hover {
  border-color: #488C9B;
  cursor: pointer;
}

.c1:focus,
.c1:checked,
.c1:active {
  border-color: #488C9B;
  background-color: #488C9B;
}

.c1:focus + label,
.c1:checked + label,
.c1:active + label {
  font-weight: bold;
  color: #488C9B;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > input {
  margin-bottom: 0.5rem;
}

<FormRadio>
  <Container>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "FormRadio__Container-sc-4fcges-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;flex-wrap:no-wrap;flex-direction:",
              [Function],
              ";justify-content:center;align-items:center;> input{",
              [Function],
              "}",
            ],
          },
          "displayName": "Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "FormRadio__Container-sc-4fcges-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Radio>
          <StyledRadio
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "0,47,108",
                          "hex": "#002F6C",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "98,194,248",
                          "hex": "#62C2F8",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,87,155",
                          "hex": "#01579B",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "250,175,64",
                          "hex": "#FAAF40",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "249,240,21",
                          "hex": "#F9F015",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "253,216,53",
                          "hex": "#FDD835",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "143,6,6",
                          "hex": "#8F0606",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "220,16,16",
                          "hex": "#DC1010",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "11,102,54",
                          "hex": "#0B6636",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "145,208,62",
                          "hex": "#91D03E",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,145,68",
                          "hex": "#019144",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "72,140,155",
                          "hex": "#488C9B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "162,235,252",
                          "hex": "#A2EBFC",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "118,182,196",
                          "hex": "#76B6C4",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [
                    Object {
                      "type": "radio",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "Radio__StyledRadio-sc-1ojnppj-0",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "appearance:none;box-shadow:none;border:2px solid ",
                      [Function],
                      ";outline:none;width:1.5rem;height:1.5rem;border-radius:50%;transition:0.3s ease all;:hover{border-color:",
                      [Function],
                      ";cursor:pointer;}:focus,:checked,:active{border-color:",
                      [Function],
                      ";background-color:",
                      [Function],
                      ";+ label{font-weight:bold;color:",
                      [Function],
                      ";}}",
                    ],
                  },
                  "displayName": "StyledRadio",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Radio__StyledRadio-sc-1ojnppj-0",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "0,47,108",
                      "hex": "#002F6C",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "98,194,248",
                      "hex": "#62C2F8",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,87,155",
                      "hex": "#01579B",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "250,175,64",
                      "hex": "#FAAF40",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "249,240,21",
                      "hex": "#F9F015",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "253,216,53",
                      "hex": "#FDD835",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "143,6,6",
                      "hex": "#8F0606",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "220,16,16",
                      "hex": "#DC1010",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "11,102,54",
                      "hex": "#0B6636",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "145,208,62",
                      "hex": "#91D03E",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,145,68",
                      "hex": "#019144",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "72,140,155",
                      "hex": "#488C9B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "162,235,252",
                      "hex": "#A2EBFC",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "118,182,196",
                      "hex": "#76B6C4",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <input
                className="c1"
                type="radio"
              />
            </StyledComponent>
          </StyledRadio>
        </Radio>
        <Label>
          <StyledLabel
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "0,47,108",
                          "hex": "#002F6C",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "98,194,248",
                          "hex": "#62C2F8",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,87,155",
                          "hex": "#01579B",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "250,175,64",
                          "hex": "#FAAF40",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "249,240,21",
                          "hex": "#F9F015",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "253,216,53",
                          "hex": "#FDD835",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "143,6,6",
                          "hex": "#8F0606",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "220,16,16",
                          "hex": "#DC1010",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "11,102,54",
                          "hex": "#0B6636",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "145,208,62",
                          "hex": "#91D03E",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,145,68",
                          "hex": "#019144",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "72,140,155",
                          "hex": "#488C9B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "162,235,252",
                          "hex": "#A2EBFC",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "118,182,196",
                          "hex": "#76B6C4",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Label__StyledLabel-f0miro-0",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "display:block;color:",
                      [Function],
                      ";font-size:1rem;font-family:\\"Gentona\\",\\"Montserrat\\";:hover{cursor:pointer;}",
                    ],
                  },
                  "displayName": "StyledLabel",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Label__StyledLabel-f0miro-0",
                  "target": "label",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "0,47,108",
                      "hex": "#002F6C",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "98,194,248",
                      "hex": "#62C2F8",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,87,155",
                      "hex": "#01579B",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "250,175,64",
                      "hex": "#FAAF40",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "249,240,21",
                      "hex": "#F9F015",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "253,216,53",
                      "hex": "#FDD835",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "143,6,6",
                      "hex": "#8F0606",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "220,16,16",
                      "hex": "#DC1010",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "11,102,54",
                      "hex": "#0B6636",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "145,208,62",
                      "hex": "#91D03E",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,145,68",
                      "hex": "#019144",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "72,140,155",
                      "hex": "#488C9B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "162,235,252",
                      "hex": "#A2EBFC",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "118,182,196",
                      "hex": "#76B6C4",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <label
                className="c2"
              />
            </StyledComponent>
          </StyledLabel>
        </Label>
      </div>
    </StyledComponent>
  </Container>
</FormRadio>
`;

exports[`FormRadio Input test match last snapshot of <FormRadio /> with ThemeProvider 1`] = `
.c2 {
  display: block;
  color: #272727;
  font-size: 1rem;
  font-family: "Gentona","Montserrat";
}

.c2:hover {
  cursor: pointer;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  box-shadow: none;
  border: 2px solid #76B6C4;
  outline: none;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
}

.c1:hover {
  border-color: #488C9B;
  cursor: pointer;
}

.c1:focus,
.c1:checked,
.c1:active {
  border-color: #488C9B;
  background-color: #488C9B;
}

.c1:focus + label,
.c1:checked + label,
.c1:active + label {
  font-weight: bold;
  color: #488C9B;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: no-wrap;
  -ms-flex-wrap: no-wrap;
  flex-wrap: no-wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > input {
  margin-right: 0.5rem;
}

<FormRadio
  row={true}
>
  <Container
    row={true}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "FormRadio__Container-sc-4fcges-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;flex-wrap:no-wrap;flex-direction:",
              [Function],
              ";justify-content:center;align-items:center;> input{",
              [Function],
              "}",
            ],
          },
          "displayName": "Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "FormRadio__Container-sc-4fcges-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      row={true}
    >
      <div
        className="c0"
      >
        <Radio>
          <StyledRadio
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "0,47,108",
                          "hex": "#002F6C",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "98,194,248",
                          "hex": "#62C2F8",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,87,155",
                          "hex": "#01579B",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "250,175,64",
                          "hex": "#FAAF40",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "249,240,21",
                          "hex": "#F9F015",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "253,216,53",
                          "hex": "#FDD835",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "143,6,6",
                          "hex": "#8F0606",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "220,16,16",
                          "hex": "#DC1010",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "11,102,54",
                          "hex": "#0B6636",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "145,208,62",
                          "hex": "#91D03E",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,145,68",
                          "hex": "#019144",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "72,140,155",
                          "hex": "#488C9B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "162,235,252",
                          "hex": "#A2EBFC",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "118,182,196",
                          "hex": "#76B6C4",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [
                    Object {
                      "type": "radio",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "Radio__StyledRadio-sc-1ojnppj-0",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "appearance:none;box-shadow:none;border:2px solid ",
                      [Function],
                      ";outline:none;width:1.5rem;height:1.5rem;border-radius:50%;transition:0.3s ease all;:hover{border-color:",
                      [Function],
                      ";cursor:pointer;}:focus,:checked,:active{border-color:",
                      [Function],
                      ";background-color:",
                      [Function],
                      ";+ label{font-weight:bold;color:",
                      [Function],
                      ";}}",
                    ],
                  },
                  "displayName": "StyledRadio",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Radio__StyledRadio-sc-1ojnppj-0",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "0,47,108",
                      "hex": "#002F6C",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "98,194,248",
                      "hex": "#62C2F8",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,87,155",
                      "hex": "#01579B",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "250,175,64",
                      "hex": "#FAAF40",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "249,240,21",
                      "hex": "#F9F015",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "253,216,53",
                      "hex": "#FDD835",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "143,6,6",
                      "hex": "#8F0606",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "220,16,16",
                      "hex": "#DC1010",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "11,102,54",
                      "hex": "#0B6636",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "145,208,62",
                      "hex": "#91D03E",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,145,68",
                      "hex": "#019144",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "72,140,155",
                      "hex": "#488C9B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "162,235,252",
                      "hex": "#A2EBFC",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "118,182,196",
                      "hex": "#76B6C4",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <input
                className="c1"
                type="radio"
              />
            </StyledComponent>
          </StyledRadio>
        </Radio>
        <Label>
          <StyledLabel
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "0,47,108",
                    "hex": "#002F6C",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "98,194,248",
                    "hex": "#62C2F8",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,87,155",
                    "hex": "#01579B",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "250,175,64",
                    "hex": "#FAAF40",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "249,240,21",
                    "hex": "#F9F015",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "253,216,53",
                    "hex": "#FDD835",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "143,6,6",
                    "hex": "#8F0606",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "220,16,16",
                    "hex": "#DC1010",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "11,102,54",
                    "hex": "#0B6636",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "145,208,62",
                    "hex": "#91D03E",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "1,145,68",
                    "hex": "#019144",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "72,140,155",
                    "hex": "#488C9B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "162,235,252",
                    "hex": "#A2EBFC",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "118,182,196",
                    "hex": "#76B6C4",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "_foldedDefaultProps": Object {
                    "theme": Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "0,47,108",
                          "hex": "#002F6C",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "98,194,248",
                          "hex": "#62C2F8",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,87,155",
                          "hex": "#01579B",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "250,175,64",
                          "hex": "#FAAF40",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "249,240,21",
                          "hex": "#F9F015",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "253,216,53",
                          "hex": "#FDD835",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "143,6,6",
                          "hex": "#8F0606",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "220,16,16",
                          "hex": "#DC1010",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "11,102,54",
                          "hex": "#0B6636",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "145,208,62",
                          "hex": "#91D03E",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "1,145,68",
                          "hex": "#019144",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "72,140,155",
                          "hex": "#488C9B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "162,235,252",
                          "hex": "#A2EBFC",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "118,182,196",
                          "hex": "#76B6C4",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    },
                  },
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Label__StyledLabel-f0miro-0",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "display:block;color:",
                      [Function],
                      ";font-size:1rem;font-family:\\"Gentona\\",\\"Montserrat\\";:hover{cursor:pointer;}",
                    ],
                  },
                  "displayName": "StyledLabel",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Label__StyledLabel-f0miro-0",
                  "target": "label",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "0,47,108",
                      "hex": "#002F6C",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "98,194,248",
                      "hex": "#62C2F8",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,87,155",
                      "hex": "#01579B",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "250,175,64",
                      "hex": "#FAAF40",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "249,240,21",
                      "hex": "#F9F015",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "253,216,53",
                      "hex": "#FDD835",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "143,6,6",
                      "hex": "#8F0606",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "220,16,16",
                      "hex": "#DC1010",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "11,102,54",
                      "hex": "#0B6636",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "145,208,62",
                      "hex": "#91D03E",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "1,145,68",
                      "hex": "#019144",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "72,140,155",
                      "hex": "#488C9B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "162,235,252",
                      "hex": "#A2EBFC",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "118,182,196",
                      "hex": "#76B6C4",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <label
                className="c2"
              />
            </StyledComponent>
          </StyledLabel>
        </Label>
      </div>
    </StyledComponent>
  </Container>
</FormRadio>
`;
